tracking.ipynb: specify default gpuClass when running in Colab.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -12,7 +12,8 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
