tracking.ipynb: import fix of English typos by AZ.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -115,7 +115,7 @@
         "\n",
         "You can run this notebook on Google Colab but if you have a large\n",
         "collection of videos or if your videos are particularly long, you may\n",
-        "use up all of your Colab resources.  It may be worth running this in\n",
+        "use up all of your Colab resources.  It may be worth running this on\n",
         "your own computers.  Contact us if you need help to do that.\n",
         "Alternatively, you purchase additional \"compute units\" with [Google\n",
         "Colab Plans](https://colab.research.google.com/signup).\n"
@@ -727,7 +727,7 @@
         "## 4 - Detection step\n",
         "\n",
         "The detection of chimpanzees is the first step in the pipeline.  If\n",
-        "you have previously ran the detection you will have a `detections.pkl`\n",
+        "you have previously run the detection step then you will have a `detections.pkl`\n",
         "file in the results directory.  If so, skip the \"detection\" cell and\n",
         "run the \"load previous detections results\" cell instead (you may need\n",
         "to click in \"2 cells hidden\" to see them).\n"
