tracking.ipynb: add initial viewer of detections with IPython and Plotly widgets.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -185,7 +185,13 @@
         "from typing import Dict, List, NamedTuple, Optional\n",
         "import unittest.mock\n",
         "\n",
+        "import IPython.display\n",
+        "import PIL.Image\n",
         "import cv2\n",
+        "import google.colab.drive\n",
+        "import google.colab.output\n",
+        "import ipywidgets\n",
+        "import plotly.express\n",
         "import torch\n",
         "import torch.cuda\n",
         "import numpy as np\n",
@@ -194,7 +200,6 @@
         "import torchvision.models\n",
         "import torchvision.transforms as transforms\n",
         "from torch.autograd import Variable\n",
-        "import google.colab.drive\n",
         "\n",
         "logging.basicConfig()\n",
         "_logger = logging.getLogger()\n",
@@ -390,6 +395,10 @@
         "else:\n",
         "    DEFAULT_DEVICE = 'cpu'\n",
         "    torch.set_default_tensor_type('torch.FloatTensor')\n",
+        "\n",
+        "\n",
+        "# Required to display the tracking results with plotly.\n",
+        "google.colab.output.enable_custom_widget_manager()\n",
         "\n",
         "\n",
         "_logger.info('Will use %s device.', DEFAULT_DEVICE.upper())\n",
@@ -659,7 +668,91 @@
         "\n",
         "    _logger.info(svt_stdout.getvalue())\n",
         "    _logger.info('Finished tracking')\n",
-        "    return svt_detections\n"
+        "    return svt_detections\n",
+        "\n",
+        "\n",
+        "def display_detections(\n",
+        "    frame_id_to_filename,\n",
+        "    svt_s0_detections,\n",
+        "):\n",
+        "    frame_id_filename_pair = sorted(\n",
+        "        list(frame_id_to_filename.items()),\n",
+        "        key=lambda kv: kv[1],\n",
+        "    )\n",
+        "\n",
+        "    figure_output = ipywidgets.Output()\n",
+        "    frame_slider = ipywidgets.IntSlider(\n",
+        "        value=0,\n",
+        "        min=0,\n",
+        "        max=len(frame_id_filename_pair) -1,\n",
+        "        step=1,\n",
+        "        orientation='horizontal',\n",
+        "        # description and readout are disabled because we'll show the\n",
+        "        # frame filename in the label ourselves.\n",
+        "        description=\"\",\n",
+        "        readout=False,\n",
+        "        # Only make changes when user stops moving slider.\n",
+        "        continuous_update=False,\n",
+        "    )\n",
+        "    previous_button = ipywidgets.Button(\n",
+        "        description='⮜',\n",
+        "        disabled=False,\n",
+        "        tooltip='Previous',\n",
+        "    )\n",
+        "    next_button = ipywidgets.Button(\n",
+        "        description='⮞',\n",
+        "        disabled=False,\n",
+        "        tooltip='Next',\n",
+        "    )\n",
+        "\n",
+        "    def show_frame(idx):\n",
+        "        img = PIL.Image.open(frame_id_filename_pair[idx][1])\n",
+        "        fig = plotly.express.imshow(img)\n",
+        "        for track, x, y, width, height in svt_s0_detections[str(idx)].values():\n",
+        "            fig.add_shape(\n",
+        "                type='rect', \n",
+        "                x0=x, \n",
+        "                x1=x + width, \n",
+        "                y0=y, \n",
+        "                y1=y + height, \n",
+        "                line_color='red',\n",
+        "            )\n",
+        "            fig.add_annotation(\n",
+        "                x=x, \n",
+        "                y=y, \n",
+        "                text=f'Track {track}', \n",
+        "                font={'color': 'red'},\n",
+        "            )\n",
+        "        figure_output.clear_output()\n",
+        "        with figure_output:\n",
+        "            fig.show()\n",
+        "\n",
+        "    def on_frame_slider_change(change):\n",
+        "        frame_label.value = frame_id_filename_pair[change['new']][1]\n",
+        "        show_frame(change['new'])\n",
+        "\n",
+        "    def on_click_previous(button):\n",
+        "        del button\n",
+        "        # IntSlider already clamps the value, we just -=1\n",
+        "        frame_slider.value -=1\n",
+        "\n",
+        "    def on_click_next(button):\n",
+        "        del button\n",
+        "        # IntSlider already clamps the value, we just +=1\n",
+        "        frame_slider.value +=1\n",
+        "\n",
+        "    previous_button.on_click(on_click_previous)\n",
+        "    next_button.on_click(on_click_next)\n",
+        "    frame_slider.observe(on_frame_slider_change, names='value')\n",
+        "\n",
+        "    frame_label = ipywidgets.Label(frame_id_filename_pair[0][1])\n",
+        "    show_frame(0)\n",
+        "\n",
+        "    buttons_box = ipywidgets.HBox(\n",
+        "        [previous_button, frame_slider, next_button]\n",
+        "    )\n",
+        "    whole_box = ipywidgets.VBox([buttons_box, frame_label, figure_output])\n",
+        "    IPython.display.display(whole_box)\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -835,25 +928,73 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6 - Visualise tracking results\n",
-        "\n",
-        "To see the tracking results, we recommend the use of\n",
-        "[VIA](https://www.robots.ox.ac.uk/~vgg/software/via/via.html).  You\n",
-        "will need to have the `results-via-project.json` and the `frames`\n",
-        "folder in your computer.\n",
-        "\n",
-        "1. Download [VIA 2](https://www.robots.ox.ac.uk/~vgg/software/via/downloads/via-2.0.12.zip)\n",
-        "   and open it in your web browser.\n",
-        "\n",
-        "2. Navigate to \"Project\" -> \"Load\" and select the\n",
-        "   `results-via-project.json` file.  A \"File Not Found\" error message will\n",
-        "   appear.  This means that VIA does not know where the images are.\n",
-        "\n",
-        "3. Navigate to \"Project\" -> \"Settings\".  Set the \"Default Path\" to the\n",
-        "   `frames` directory in your computer.\n"
+        "## 6 - Visualise tracking results\n"
       ],
       "metadata": {
         "id": "1XoTxVlsFHU3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ### 6.1 - Visualise in Google Colab (option 1)\n",
+        "\n",
+        "#@markdown You can see the tracking results right here, inside this\n",
+        "#@markdown Google Colab notebook, but the interface is a bit slow.\n",
+        "#@markdown This is fine if you want to have a quick look at some of\n",
+        "#@markdown of frames only.\n",
+        "\n",
+        "#@markdown Run this cell and then click on the arrow buttons to\n",
+        "#@markdown display the next or previous frame, and you can move the\n",
+        "#@markdown slider to move to a specific frame.  When you dragging the\n",
+        "#@markdown slider, the displayed frame is only updated once the slider\n",
+        "#@markdown is released.  Expect a couple of seconds wait for the frame\n",
+        "#@markdown to be updated.\n",
+        "\n",
+        "display_detections(frame_id_to_filename, svt_detections.detection_data['0'])\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "4sbn8DsHIi1C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.2 - Visualise locally with VIA (option 2)\n",
+        "\n",
+        "[VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) is a web\n",
+        "application to view and perform annotations of image, audio, and\n",
+        "video.  It is free software and runs locally on the web browser.  You\n",
+        "can view the tracking results on the individual frames with VIA.\n",
+        "\n",
+        "This is much more responsive than viewing inside the notebook but\n",
+        "requires download the frames locally (either manually or with [Google\n",
+        "Drive for\n",
+        "Desktop](https://support.google.com/a/users/answer/13022292)).\n",
+        "\n",
+        "1. Download [VIA\n",
+        "   2](https://www.robots.ox.ac.uk/~vgg/software/via/downloads/via-2.0.12.zip).\n",
+        "   This is a zip file.  Open it.  Inside there is a `via.html` file.\n",
+        "   Open it in your web browser to start VIA.\n",
+        "\n",
+        "2. Download the `results-via-project.json` from your results diretcory\n",
+        "   and the whole frames directory.  If you are using Google Drive for\n",
+        "   Desktop sync it now.  The frames directory is pretty large and this\n",
+        "   step may take a long time.\n",
+        "\n",
+        "3. Navigate to \"Project\" -> \"Load\" and select the\n",
+        "   `results-via-project.json` file.  A \"File Not Found\" error message\n",
+        "   will appear.  This means that VIA does not know where the images\n",
+        "   are.\n",
+        "\n",
+        "4. Navigate to \"Project\" -> \"Settings\".  Set the \"Default Path\" to the\n",
+        "   `frames` directory in your computer.\n"
+      ],
+      "metadata": {
+        "id": "QBdj3CToLPVG"
       }
     }
   ]
