tracking.ipynb: add option to generate video file with tracks annotated.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -94,6 +94,8 @@
         "\n",
         "- `results.csv` - the final detections in CSV format.\n",
         "\n",
+        "- `tracks.mp4` - video with tracks (see Section 6).\n",
+        "\n",
         "Note that none of those files includes the video filename.  As such,\n",
         "our recommendation is to create a results directory for each video.\n",
         "\n",
@@ -175,30 +177,32 @@
         "import os\n",
         "import os.path\n",
         "import pickle\n",
-        "import requests\n",
+        "import shutil\n",
         "import subprocess\n",
         "import sys\n",
         "import tempfile\n",
         "import warnings\n",
         "from collections import defaultdict\n",
         "from dataclasses import dataclass\n",
-        "from typing import Dict, List, NamedTuple, Optional\n",
-        "import unittest.mock\n",
+        "from typing import Dict, List, Optional\n",
         "\n",
-        "import IPython.display\n",
-        "import PIL.Image\n",
         "import cv2\n",
         "import google.colab.drive\n",
         "import google.colab.output\n",
+        "import IPython.display\n",
         "import ipywidgets\n",
-        "import plotly.express\n",
-        "import torch\n",
-        "import torch.cuda\n",
+        "import matplotlib.cm\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
+        "import PIL.Image\n",
+        "import plotly.express\n",
+        "import requests\n",
+        "import torch\n",
         "import torch.backends.cudnn as cudnn\n",
+        "import torch.cuda\n",
         "import torch.nn as nn\n",
         "import torchvision.models\n",
-        "import torchvision.transforms as transforms\n",
+        "import torchvision.transforms\n",
         "from torch.autograd import Variable\n",
         "\n",
         "logging.basicConfig()\n",
@@ -381,6 +385,8 @@
         "DETECTIONS_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections.pkl')\n",
         "VIA_PROJECT_FPATH = os.path.join(RESULTS_DIRECTORY, 'results-via-project.json')\n",
         "CSV_FPATH = os.path.join(RESULTS_DIRECTORY, 'results.csv')\n",
+        "TRACKS_VIDEO_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.mp4')\n",
+        "\n",
         "\n",
         "# These should never be true because USE_GPU was set automatically\n",
         "# based on whether a GPU is available.\n",
@@ -396,16 +402,15 @@
         "    DEFAULT_DEVICE = 'cpu'\n",
         "    torch.set_default_tensor_type('torch.FloatTensor')\n",
         "\n",
-        "\n",
-        "# Required to display the tracking results with plotly.\n",
-        "google.colab.output.enable_custom_widget_manager()\n",
-        "\n",
-        "\n",
         "_logger.info('Will use %s device.', DEFAULT_DEVICE.upper())\n",
         "\n",
         "\n",
+        "# Required to display the tracking results with plotly or matplotlib.\n",
+        "google.colab.output.enable_custom_widget_manager()\n",
+        "\n",
+        "\n",
         "def local_path_for_model(path: str) -> str:\n",
-        "    if path.startswith(\"https://\"):\n",
+        "    if path.startswith('https://'):\n",
         "        downloaded_fh = tempfile.NamedTemporaryFile(delete=False)\n",
         "        r = requests.get(path)\n",
         "        downloaded_fh.write(r.content)\n",
@@ -414,13 +419,96 @@
         "    else:\n",
         "        return path\n",
         "\n",
+        "\n",
         "DETECTION_MODEL_PATH = local_path_for_model(DETECTION_MODEL)\n",
         "TRACKING_MODEL_PATH = local_path_for_model(TRACKING_MODEL)\n",
         "\n",
         "\n",
-        "face_id_normalize = transforms.Normalize(\n",
+        "face_id_normalize = torchvision.transforms.Normalize(\n",
         "    mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]\n",
         ")\n",
+        "\n",
+        "\n",
+        "logging2ffmpeg_loglevel = {\n",
+        "    'CRITICAL': 'fatal',\n",
+        "    'ERROR': 'error',\n",
+        "    'WARNING': 'warning',\n",
+        "    'INFO': 'info',\n",
+        "    'DEBUG': 'debug',\n",
+        "}\n",
+        "\n",
+        "FFMPEG_LOG_LEVEL = logging2ffmpeg_loglevel[LOG_LEVEL]\n",
+        "\n",
+        "\n",
+        "def subprocess_print_stderr(args: List[str]) -> None:\n",
+        "    p = subprocess.Popen(args, text=True, stderr=subprocess.PIPE)\n",
+        "\n",
+        "    for line in iter(p.stderr.readline, \"\"):\n",
+        "        print(line, end=\"\")\n",
+        "    p.wait()\n",
+        "    if p.returncode != 0:\n",
+        "        raise Exception('subprocess failed')\n",
+        "\n",
+        "\n",
+        "def ffmpeg_video_to_frames(video_fpath: str, frames_dir: str) -> None:\n",
+        "    subprocess_print_stderr(\n",
+        "        [\n",
+        "            'ffmpeg',\n",
+        "            '-i', video_fpath,\n",
+        "            '-vsync', 'vfr',\n",
+        "            '-q:v', '1',\n",
+        "            '-start_number', '0',\n",
+        "            '-filter:v', 'scale=iw:ih*(1/sar)',\n",
+        "            '-loglevel', FFMPEG_LOG_LEVEL,\n",
+        "            # FIXME: what if %06d.jpg is not enough and rools over?\n",
+        "            os.path.join(FRAMES_DIR, \"%06d.jpg\"),\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "def ffprobe_get_frame_rate(video_fpath: str) -> float:\n",
+        "    ffprobe_p = subprocess.run(\n",
+        "        [\n",
+        "            'ffprobe',\n",
+        "            '-loglevel', 'panic',\n",
+        "            '-select_streams', 'v',\n",
+        "            '-show_entries', 'stream=r_frame_rate',\n",
+        "            '-print_format', 'csv',\n",
+        "            video_fpath,\n",
+        "        ],\n",
+        "        check=True,\n",
+        "        stdout=subprocess.PIPE,\n",
+        "        text=True,\n",
+        "    )\n",
+        "    # we expect something like \"stream,25/1\\n\"\n",
+        "    frame_rate_parts = ffprobe_p.stdout.split(',')[1][:-1].split('/')\n",
+        "    if len(frame_rate_parts) == 1:\n",
+        "        return float(frame_rate_parts[0])\n",
+        "    else:  # format is something such as 25/1\n",
+        "        return float(frame_rate_parts[0]) / float(frame_rate_parts[1])\n",
+        "\n",
+        "\n",
+        "def ffmpeg_video_from_frames_and_video(\n",
+        "    frames_dir: str, in_video_fpath: str, out_video_fpath: str\n",
+        ") -> None:\n",
+        "    frame_rate = ffprobe_get_frame_rate(in_video_fpath)\n",
+        "    subprocess_print_stderr(\n",
+        "        [\n",
+        "            'ffmpeg',\n",
+        "            '-y',  # overwrite output files without asking\n",
+        "            '-loglevel', FFMPEG_LOG_LEVEL,\n",
+        "            '-framerate', str(frame_rate),\n",
+        "            '-pattern_type', 'glob',\n",
+        "            '-i', os.path.join(frames_dir, '*.jpg'),\n",
+        "            '-i', in_video_fpath,\n",
+        "            '-c:a', 'copy',\n",
+        "            '-c:v', 'libx264',\n",
+        "            '-map', '0:v:0',  # use video from input 0 / stream 0\n",
+        "            '-map', '1:a:0',  # use audio from input 1 / stream 0\n",
+        "            '-pix_fmt', 'yuv420p',\n",
+        "            out_video_fpath,\n",
+        "        ]\n",
+        "    )\n",
         "\n",
         "\n",
         "# Ideally this would be a NamedTuple and values couldn't change.\n",
@@ -457,7 +545,7 @@
         "        )\n",
         "\n",
         "    num_classes = 2  # +1 background\n",
-        "    net = build_ssd(\"test\", 300, num_classes)\n",
+        "    net = build_ssd('test', 300, num_classes)\n",
         "    net.load_state_dict(\n",
         "        torch.load(detection_model_path, map_location=DEFAULT_DEVICE)\n",
         "    )\n",
@@ -544,7 +632,8 @@
         "    return frame_detections, frame_id_to_filename\n",
         "\n",
         "\n",
-        "# XXX: this is not tested because we don't have a face_id_model yet.\n",
+        "# TODO: not currently used because we need a notebook to fine face\n",
+        "# identification first.\n",
         "def identify_faces(\n",
         "    detections: Dict[str, Dict[str, Detection]],\n",
         "    frame_id_to_filename: Dict[str, str],\n",
@@ -556,7 +645,7 @@
         "    face_id_checkpoint = torch.load(face_id_model_fpath)\n",
         "\n",
         "    face_id_model = nn.DataParallel(face_id_model).cuda()\n",
-        "    face_id_model.load_state_dict(face_id_checkpoint[\"state_dict\"])\n",
+        "    face_id_model.load_state_dict(face_id_checkpoint['state_dict'])\n",
         "\n",
         "    face_id_model.eval()\n",
         "    _logger.info('Finished loading model %s', face_id_model_fpath)\n",
@@ -610,7 +699,10 @@
         "\n",
         "            # keep only relevant output + move to cpu + detach\n",
         "            face_id_vector_keep = (\n",
-        "                face_id_vector[0][: len(FACE_IDENTIFICATION_MAP)].cpu().detach().numpy()\n",
+        "                face_id_vector[0][: len(FACE_IDENTIFICATION_MAP)]\n",
+        "                .cpu()\n",
+        "                .detach()\n",
+        "                .numpy()\n",
         "            )\n",
         "\n",
         "            # save face_id_scores\n",
@@ -684,7 +776,7 @@
         "    frame_slider = ipywidgets.IntSlider(\n",
         "        value=0,\n",
         "        min=0,\n",
-        "        max=len(frame_id_filename_pair) -1,\n",
+        "        max=len(frame_id_filename_pair) - 1,\n",
         "        step=1,\n",
         "        orientation='horizontal',\n",
         "        # description and readout are disabled because we'll show the\n",
@@ -710,17 +802,17 @@
         "        fig = plotly.express.imshow(img)\n",
         "        for track, x, y, width, height in svt_s0_detections[str(idx)].values():\n",
         "            fig.add_shape(\n",
-        "                type='rect', \n",
-        "                x0=x, \n",
-        "                x1=x + width, \n",
-        "                y0=y, \n",
-        "                y1=y + height, \n",
+        "                type='rect',\n",
+        "                x0=x,\n",
+        "                x1=x + width,\n",
+        "                y0=y,\n",
+        "                y1=y + height,\n",
         "                line_color='red',\n",
         "            )\n",
         "            fig.add_annotation(\n",
-        "                x=x, \n",
-        "                y=y, \n",
-        "                text=f'Track {track}', \n",
+        "                x=x,\n",
+        "                y=y,\n",
+        "                text=f'Track {track}',\n",
         "                font={'color': 'red'},\n",
         "            )\n",
         "        figure_output.clear_output()\n",
@@ -734,12 +826,12 @@
         "    def on_click_previous(button):\n",
         "        del button\n",
         "        # IntSlider already clamps the value, we just -=1\n",
-        "        frame_slider.value -=1\n",
+        "        frame_slider.value -= 1\n",
         "\n",
         "    def on_click_next(button):\n",
         "        del button\n",
         "        # IntSlider already clamps the value, we just +=1\n",
-        "        frame_slider.value +=1\n",
+        "        frame_slider.value += 1\n",
         "\n",
         "    previous_button.on_click(on_click_previous)\n",
         "    next_button.on_click(on_click_next)\n",
@@ -748,11 +840,81 @@
         "    frame_label = ipywidgets.Label(frame_id_filename_pair[0][1])\n",
         "    show_frame(0)\n",
         "\n",
-        "    buttons_box = ipywidgets.HBox(\n",
-        "        [previous_button, frame_slider, next_button]\n",
-        "    )\n",
+        "    buttons_box = ipywidgets.HBox([previous_button, frame_slider, next_button])\n",
         "    whole_box = ipywidgets.VBox([buttons_box, frame_label, figure_output])\n",
-        "    IPython.display.display(whole_box)\n"
+        "    IPython.display.display(whole_box)\n",
+        "\n",
+        "\n",
+        "def make_frames_with_tracks(\n",
+        "    csv_fpath: str, in_frames_dir: str, out_frames_dir: str\n",
+        ") -> None:\n",
+        "    cmap = list(matplotlib.cm.Pastel1.colors)\n",
+        "    cmap = [(int(c[0] * 255), int(c[1] * 255), int(c[2] * 255)) for c in cmap]\n",
+        "\n",
+        "    font_face = cv2.FONT_HERSHEY_SIMPLEX\n",
+        "    font_scale = 1\n",
+        "    font_thickness = 1\n",
+        "\n",
+        "    img = None\n",
+        "    prev_frame_id = None\n",
+        "\n",
+        "    track_data = pd.read_csv(csv_fpath)\n",
+        "    track_data.sort_values('frame_id', inplace=True)\n",
+        "    for row in track_data.itertuples():\n",
+        "        # Some detections have no track.  Do not show them on the\n",
+        "        # video.\n",
+        "        if row.track_id == UNKNOWN_TRACK_ID_MARKER:\n",
+        "            continue\n",
+        "\n",
+        "        # Read image only if this is a different frame, otherwise,\n",
+        "        # keep appending boxes and labels to the previous image.\n",
+        "        if prev_frame_id != row.frame_id:\n",
+        "            img = cv2.imread(os.path.join(in_frames_dir, row.frame_filename))\n",
+        "            prev_frame_id = row.frame_id\n",
+        "\n",
+        "        colour = cmap[row.track_id % len(cmap)]\n",
+        "        label = str(row.track_id)\n",
+        "\n",
+        "        bbox_x = int(row.x)\n",
+        "        bbox_y = int(row.y)\n",
+        "        bbox_w = int(row.width)\n",
+        "        bbox_h = int(row.height)\n",
+        "\n",
+        "        text_width, text_height = cv2.getTextSize(\n",
+        "            label, font_face, font_scale, font_thickness\n",
+        "        )[0]\n",
+        "        text_box_pts = (\n",
+        "            (bbox_x + bbox_w - text_width + 4, bbox_y),\n",
+        "            (bbox_x + bbox_w, bbox_y - text_height - 4),\n",
+        "        )\n",
+        "\n",
+        "        # Draw track bounding box\n",
+        "        cv2.rectangle(\n",
+        "            img,\n",
+        "            (bbox_x, bbox_y),\n",
+        "            (bbox_x + bbox_w, bbox_y + bbox_h),\n",
+        "            colour,\n",
+        "            thickness=2,\n",
+        "        )\n",
+        "        # Draw box for bounding box label\n",
+        "        cv2.rectangle(\n",
+        "            img,\n",
+        "            text_box_pts[0],\n",
+        "            text_box_pts[1],\n",
+        "            colour,\n",
+        "            cv2.FILLED,\n",
+        "        )\n",
+        "        # Write label\n",
+        "        cv2.putText(\n",
+        "            img,\n",
+        "            label,\n",
+        "            text_box_pts[0],\n",
+        "            font_face,\n",
+        "            font_scale,\n",
+        "            color=(0, 0, 0),\n",
+        "            lineType=cv2.LINE_AA,\n",
+        "        )\n",
+        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)"
       ],
       "metadata": {
         "cellView": "form",
@@ -785,25 +947,7 @@
         "\n",
         "os.makedirs(FRAMES_DIR, exist_ok=False)\n",
         "\n",
-        "logging2ffmpeg_loglevel = {\n",
-        "    'CRITICAL' : 'fatal',\n",
-        "    'ERROR' : 'error',\n",
-        "    'WARNING' : 'warning',\n",
-        "    'INFO' : 'info',\n",
-        "    'DEBUG' : 'debug',\n",
-        "}\n",
-        "\n",
-        "ffmpeg_return = subprocess.run([\n",
-        "    'ffmpeg',\n",
-        "    '-i', VIDEO_FILE,\n",
-        "    '-vsync', 'vfr',\n",
-        "    '-q:v', '1',\n",
-        "    '-start_number', '0',\n",
-        "    '-filter:v', 'scale=iw:ih*(1/sar)',\n",
-        "    '-loglevel', logging2ffmpeg_loglevel[LOG_LEVEL],\n",
-        "    # FIXME: what if %06d.jpg is not enough and rools over?\n",
-        "    os.path.join(FRAMES_DIR, '%06d.jpg'),\n",
-        "], check=True)\n",
+        "ffmpeg_video_to_frames(VIDEO_FILE, FRAMES_DIR)\n",
         "\n",
         "_logger.info('Finished extracting individual frames to \\'%s\\'', FRAMES_DIR)\n"
       ],
@@ -909,12 +1053,13 @@
         "# images can be found by setting the project \"Default Path\".  This\n",
         "# hack changes the filepath in the SVT internals.\n",
         "svt_detections.frame_id_to_filename_map = {\n",
-        "    k: os.path.basename(v) for k, v in svt_detections.frame_id_to_filename_map.items()\n",
+        "    k: os.path.basename(v)\n",
+        "    for k, v in svt_detections.frame_id_to_filename_map.items()\n",
         "}\n",
         "\n",
         "svt_detections.export_via_project(\n",
         "    VIA_PROJECT_FPATH,\n",
-        "    config={'frame_img_dir': FRAMES_DIR, 'via_project_name':''}\n",
+        "    config={'frame_img_dir': FRAMES_DIR, 'via_project_name': ''},\n",
         ")\n",
         "svt_detections.export_plain_csv(CSV_FPATH, {})\n"
       ],
@@ -996,6 +1141,32 @@
       "metadata": {
         "id": "QBdj3CToLPVG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ### 6.3 - Create Video file with tracks (option 3)\n",
+        "\n",
+        "#@markdown You may also generate a video file with the detections\n",
+        "#@markdown superimposed.  The video file will be named `tracks.mp4`\n",
+        "#@markdown and saved in the `RESULTS_DIRECTORY` in your Google Drive.\n",
+        "\n",
+        "with tempfile.TemporaryDirectory() as out_frames_dir:\n",
+        "    tmp_tracks_fpath = os.path.join(out_frames_dir, 'tracks.mp4')\n",
+        "    make_frames_with_tracks(CSV_FPATH, FRAMES_DIR, out_frames_dir)\n",
+        "    ffmpeg_video_from_frames_and_video(\n",
+        "        out_frames_dir, VIDEO_FILE, tmp_tracks_fpath\n",
+        "    )\n",
+        "    shutil.move(tmp_tracks_fpath, TRACKS_VIDEO_FPATH)\n",
+        "\n",
+        "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "l44oU0LWA7nw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
