tracking.ipynb: silence some deprecation warnings from PyTorch in ssd_pytorch.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -584,8 +584,16 @@
         "        transformed = Variable(transformed.unsqueeze(0))\n",
         "        transformed = transformed.to(DEFAULT_DEVICE)\n",
         "\n",
-        "        # Send image through network\n",
-        "        net_out = net(transformed)  # run detector\n",
+        "        # Silence UserWarnings from ssd_pytorch/layers/box_utils.py \"An output\n",
+        "        # with one or more elements was resized since it had shape [X], which\n",
+        "        # does not match the required output shape [Y]. This behavior is\n",
+        "        # deprecated, and in a future PyTorch release outputs will not be\n",
+        "        # resized unless they have zero elements. You can explicitly reuse an\n",
+        "        # out tensor t by resizing it, inplace, to zero elements with\n",
+        "        # t.resize_(0).\"\n",
+        "        with warnings.catch_warnings():\n",
+        "            warnings.simplefilter(\"ignore\")\n",
+        "            net_out = net(transformed)  # run detector\n",
         "        net_detections = net_out.data\n",
         "\n",
         "        # Scale each detection back up to the image\n",
